[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/screens/section-edit/scripts/section_drawing.gd" type="Script" id=1]
[ext_resource path="res://assets/screens/section-edit/scripts/outline.gd" type="Script" id=2]

[node name="SectionDrawing" type="ColorRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 40.0
margin_top = -200.0
margin_right = -40.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
color = Color( 0.741176, 0.741176, 0.741176, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Outline" type="Line2D" parent="."]
position = Vector2( 512, 200 )
points = PoolVector2Array( 9.39326, -7.94979, -6.60463, 23.7281, -20.7118, -14.1945 )
width = 0.75
default_color = Color( 0, 0, 0, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="resized" from="." to="." method="_on_SectionDrawing_resized"]
[connection signal="resized_drawing" from="." to="Outline" method="_on_SectionDrawing_resized_drawing"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
